kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wereldingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wereld.stijnbaltessen.digital
    http:
      paths:
        - backend:
            serviceName: wereld-service
            servicePort: 80
